--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   },
   "dependencies": {
     "next": "^11.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.14",
-    "@types/react": "^16.9.41",
+    "@types/react": "^17.0.14",
     "eslint": "^7.3.1",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
+    "eslint-config-next": "^11.0.1",
     "prettier": "^2.0.5",
     "typescript": "^4.3.5"
   }
