--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev",
     "prebuild": "npm run lint",
     "build": "next build && next export",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "^12.1.5",
@@ -22,7 +23,13 @@
     "eslint": "^7.3.1",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
     "eslint-config-next": "^11.0.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.11",
     "prettier": "^2.0.5",
     "typescript": "^4.3.5"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
