--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "personal-website",
-  "version": "0.1.0",
-  "private": true,
-  "description": "Personal Website for Nick Phillips",
-  "repository": "https://github.com/n1ckp/personal-website",
-  "scripts": {
-    "lint": "eslint .",
-    "dev": "next dev",
-    "prebuild": "npm run lint",
-    "build": "next build && next export",
-    "start": "next start",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "next": "^12.1.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "^14.0.14",
-    "@types/react": "^17.0.14",
-    "eslint": "^7.3.1",
-    "eslint-config-airbnb-typescript-prettier": "^3.1.0",
-    "eslint-config-next": "^11.0.1",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.2.11",
-    "prettier": "^2.0.5",
-    "typescript": "^4.3.5"
-  },
-  "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
-  }
+    "name": "personal-website",
+    "version": "0.1.0",
+    "private": true,
+    "description": "Personal Website for Nick Phillips",
+    "repository": "https://github.com/n1ckp/personal-website",
+    "scripts": {
+        "lint": "eslint .",
+        "dev": "next dev",
+        "prebuild": "npm run lint",
+        "build": "next build && next export",
+        "start": "next start",
+        "prepare": "husky install",
+        "format": "prettier . --write"
+    },
+    "dependencies": {
+        "next": "^12.1.5",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3.2.0",
+        "@eslint/js": "^9.17.0",
+        "@types/node": "^14.0.14",
+        "@types/react": "^17.0.14",
+        "eslint": "^9.17.0",
+        "eslint-config-next": "^15.1.1",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.2.11",
+        "prettier": "^2.0.5",
+        "typescript": "^5.7.2"
+    },
+    "lint-staged": {
+        "*.js": "eslint --cache --fix",
+        "*.{js,css,md}": "prettier --write"
+    }
 }
