--- a/package.json
+++ b/package.json
@@ -5,26 +5,26 @@
     "description": "Personal Website for Nick Phillips",
     "repository": "https://github.com/n1ckp/personal-website",
     "scripts": {
-        "lint": "eslint .",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
         "dev": "next dev",
         "prebuild": "npm run lint",
-        "build": "next build && next export",
+        "build": "next build",
         "start": "next start",
         "prepare": "husky install",
         "format": "prettier . --write"
     },
     "dependencies": {
-        "next": "^12.1.5",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "next": "16.0.3",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.2.0",
         "@eslint/js": "^9.17.0",
-        "@types/node": "^14.0.14",
-        "@types/react": "^17.0.14",
+        "@types/node": "^20.19.25",
+        "@types/react": "18.2.4",
         "eslint": "^9.17.0",
-        "eslint-config-next": "^15.1.1",
+        "eslint-config-next": "16.0.3",
         "eslint-plugin-react-hooks": "^5.1.0",
         "husky": "^9.1.7",
         "lint-staged": "^15.2.11",
@@ -34,5 +34,8 @@
     "lint-staged": {
         "*.js": "eslint --cache --fix",
         "*.{js,css,md}": "prettier --write"
+    },
+    "overrides": {
+        "@types/react": "18.2.4"
     }
 }
